* Extended the text recognition to UTF-8 characters - if a text contains too many   bad characters, it will be rejected, at least after bug #675 has been fixed. * In the future, we should use the same mechanism as the TextSnifferAddon of the   registrar; it would also be nice to use additional charset information (at least   differentiating between latin-1 and UTF-8). * Minor cleanup.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@18703 a95241bf-73f2-0310-859d-f6bbb57e9c96